--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Noto Sans';
+    box-sizing: border-box;
 }
 
 .accent-color {
@@ -9,6 +10,8 @@
 body {
     display: flex;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 main {
@@ -16,7 +19,13 @@ main {
     flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 100%;
+    border: solid 3px #dd2026;
+    padding: 1rem;
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    max-height: 850px;
+    max-width: 500px;
 }
 
 main > * {
