--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -19,12 +19,13 @@ main {
     flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: center;
-    border: solid 3px #dd2026;
+    border: solid 7px #dd2026;
     padding: 1rem;
+    padding-top: .25rem;
     margin: 0;
     height: 100vh;
     width: 100vw;
-    max-height: 850px;
+    max-height: 100vh;
     max-width: 500px;
 }
 
@@ -69,4 +70,26 @@ main > * {
 
 .currentSide {
     opacity: 1.0;
+}
+
+.turn-order-spaces {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+}
+
+.turn-order-space {
+    height: 50px;
+    width: 50px;
+    background-color: #999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.currentTurnSpace {
+    background-color: #000000;
 }
