--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -16,9 +16,8 @@ body {
 
 main {
     display: flex;
-    flex-shrink: 0;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     border: solid 7px #dd2026;
     padding: 1rem;
     padding-top: .25rem;
@@ -30,13 +29,36 @@ main {
 }
 
 main > * {
-    flex: 0 0 100%;
-    margin-bottom: 1.5rem;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1rem;
+    width: 100%;
 }
 
 .cards-left {
     font-size: 0.9rem;
     text-align: center;
+}
+
+.mission {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+
+.mission > p {
+    border-radius: 50%;
+    background-color: #dd2026;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.2rem;
+    height: 50px;
+    flex-basis: 50px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .draw-button {
@@ -58,7 +80,7 @@ main > * {
 .sides {
     display: flex;
     justify-content: space-between;
-    flex-basis: 50%;
+    width: 60%;
 }
 
 .orbital-colony {
