--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Noto Sans';
+    font-family: 'Noto Sans', sans-serif;
     box-sizing: border-box;
 }
 
@@ -18,13 +18,12 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: solid 7px #dd2026;
     padding: 1rem;
     padding-top: .25rem;
     margin: 0;
     height: 100vh;
     width: 100vw;
-    max-height: 100vh;
+    max-height: 900px;
     max-width: 500px;
 }
 
