--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -3,10 +3,6 @@
     box-sizing: border-box;
 }
 
-.accent-color {
-    color: #dd2026;
-}
-
 body {
     display: flex;
     justify-content: center;
@@ -37,6 +33,7 @@ main > * {
 .cards-left {
     font-size: 0.9rem;
     text-align: center;
+    margin: 0;
 }
 
 .mission {
@@ -44,6 +41,11 @@ main > * {
     justify-content: center;
     padding: 0;
     margin: 0;
+    visibility: hidden;
+}
+
+.showMission {
+    visibility: visible;
 }
 
 .mission > p {
@@ -62,7 +64,7 @@ main > * {
 
 .action {
     height: 200px;
-    width: 200px;
+    width: 190px;
 }
 
 .draw-button {
@@ -84,7 +86,8 @@ main > * {
 .sides {
     display: flex;
     justify-content: space-between;
-    width: 60%;
+    width: 70%;
+    align-items: center;
 }
 
 .orbital-colony {
@@ -92,6 +95,16 @@ main > * {
     height: 80px;
     opacity: 0.3;
     cursor: pointer;
+}
+
+.travel {
+    width: 50px;
+    height: 50px;
+    fill: #333333;
+}
+
+.noTravel {
+    opacity: 0.1;
 }
 
 .currentSide {
