--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -10,6 +10,10 @@ body {
     padding: 0;
 }
 
+a, a:visited, a:hover {
+    text-decoration: none;
+}
+
 main {
     display: flex;
     flex-direction: column;
