--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -96,6 +96,7 @@ main > * {
     justify-content: space-between;
     width: 50%;
     align-items: center;
+    min-height: 60px;
 }
 
 .noBottomMargin {
