--- a/onmars/styles.css
+++ b/onmars/styles.css
@@ -118,7 +118,16 @@ main > * {
 }
 
 .noTravel {
-    opacity: 0.1;
+    width: 50px;
+    height: 50px;
+    fill: rgba(51, 51, 51, 0.2);
+}
+
+.st1 {
+    fill: none;
+    stroke: #DD2026;
+    stroke-width: 45;
+    stroke-miterlimit: 10;
 }
 
 .currentSide {
