--- a/kanbanev/styles.css
+++ b/kanbanev/styles.css
@@ -269,24 +269,27 @@ a, a:visited, a:hover {
 
 .recycle {
     padding: 0.75rem;
-    margin-top: .25rem;
     width: 100vw;
     background-color: #ffefe1;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    font-size: 0.9rem;
 }
 
 .recycle-title {
     flex-basis: 100%;
     width: 100%;
-    margin-bottom: 1rem;
 }
 
 .recycle-section {
     flex-basis: 200px;
     display: flex;
     justify-content: space-between;
+}
+
+.recycle-title + .recycle-section {
+    margin-top: 0.5rem;
 }
 
 .recycle-section img + img {
@@ -312,6 +315,7 @@ a, a:visited, a:hover {
 
 .small-image {
     max-height: 40px;
+    margin-top: 0.125rem;
 }
 
 .draw-part {
