Show part at end of dept selection

--- a/kanbanev/styles.css
+++ b/kanbanev/styles.css
@@ -288,6 +288,10 @@ a, a:visited, a:hover {
     justify-content: space-between;
 }
 
+.recycle-section-centered {
+    justify-content: center;
+}
+
 .recycle-title + .recycle-section {
     margin-top: 0.5rem;
 }
