--- a/nemoswarcalc/styles.css
+++ b/nemoswarcalc/styles.css
@@ -42,11 +42,16 @@ body {
     font-size: 1rem;
 }
 
-.entry {
+.entry, .entry-small {
     padding: .5rem;
     color: #000;
-    margin-right: 1rem;
-    width: 7rem;
+    margin-right: 0.25rem;
+    width: 6rem;
+}
+
+.entry-small {
+    width: 3rem;
+    margin-right: 0.25rem;
 }
 
 .motive {
