--- a/nemoswarcalc/styles.css
+++ b/nemoswarcalc/styles.css
@@ -94,7 +94,18 @@ option {
 }
 
 .totalscore {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
     font-size: 1.5rem;
     border-top: solid 1px #fff;
+}
+
+.totalscore em {
+    font-size: 1.3rem;
+}
+
+.otherlinks {
+    display: block;
+    font-size: 0.9rem;
+    margin-bottom: 3rem;
 }
