--- a/nemoswarcalc/styles.css
+++ b/nemoswarcalc/styles.css
@@ -60,7 +60,9 @@ body {
 }
 
 .instructions {
-    border-bottom: solid 1px #fff;
+    background-color: #FCF4E7;
+    opacity: 0.8;
+    padding: 1rem;
 }
 
 .instructions ul {
@@ -69,6 +71,7 @@ body {
 
 .instructions * {
     font-size: 0.75rem;
+    color: black;
 }
 
 .instructions li {
