--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -139,3 +139,8 @@ a, a:visited, a:hover {
     text-align: center;
     font-size: 1.2rem;
 }
+
+.start-new {
+    margin-bottom: .25rem;
+    font-size: 0.9rem;
+}
