--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -87,7 +87,6 @@ a, a:visited, a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     padding: 1rem;
     padding-top: .25rem;
     margin: 0;
@@ -100,6 +99,10 @@ a, a:visited, a:hover {
     padding: 0;
     margin-bottom: 0.5rem;
     width: 100%;
+}
+
+.text-centered {
+    text-align: center;
 }
 
 .button-container {
