--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -148,6 +148,48 @@ a, a:visited, a:hover {
     font-size: 0.9rem;
 }
 
+.section-title {
+    font-size: 1.1rem;
+    text-align: center;
+    margin-bottom: 0.25rem;
+}
+
+.section-detail {
+    text-align: center;
+    margin-top: 0;
+}
+
+/* --- Cards --- */
+.cards {
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+}
+
+.card {
+    border: solid 1px #ccc;
+    padding: .5rem;
+    margin-bottom: 1rem;
+    box-shadow: 3px 3px 3px #ccc;
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.card--clickable {
+    cursor: pointer;
+}
+
+.card__name {
+    font-weight: bold;
+    margin: 0;
+}
+
+.card--clickable .card__name {
+    color: darkblue;
+}
+
+
 /* --- Board State --- */
 .boardstate {
     font-size: 0.95rem;
