--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -163,6 +163,10 @@ a, a:visited, a:hover {
     font-weight: bold;
 }
 
+.action-message {
+    font-size: 0.9rem;
+}
+
 /* --- Cards --- */
 .cards {
     list-style: none;
@@ -177,7 +181,8 @@ a, a:visited, a:hover {
     box-shadow: 3px 3px 3px #ccc;
     min-height: 50px;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .card--clickable {
@@ -191,6 +196,14 @@ a, a:visited, a:hover {
 
 .card--clickable .card__name {
     color: darkblue;
+}
+
+.card__area {
+    display: flex;
+    border-top: dashed 1px #ccc;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    justify-content: space-around;
 }
 
 
