--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -179,6 +179,10 @@ a, a:visited, a:hover {
     border-top: dashed 1px #ccc;
 }
 
+input[type="radio"]:checked + span {
+    font-weight: bold;
+}
+
 /* --- Cards --- */
 .cards {
     list-style: none;
