--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -138,9 +138,14 @@ a, a:visited, a:hover {
     margin-bottom: 0rem;
 }
 
+.startsubtitle {
+    font-size: 1.3rem;
+}
+
 .startmessage {
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    margin-top: 0.5rem;
 }
 
 .start-new {
@@ -149,14 +154,20 @@ a, a:visited, a:hover {
 }
 
 .section-title {
-    font-size: 1.1rem;
+    font-size: 1rem;
     text-align: center;
-    margin-bottom: 0.25rem;
+    flex-shrink: 0;
+    flex-basis: 100%;
+    margin: 0;
+    text-align: left;
 }
 
 .section-detail {
     text-align: center;
-    margin-top: 0;
+    margin: 0;
+    flex-shrink: 0;
+    flex-basis: 100%;
+    text-align: left;
 }
 
 .action-header {
@@ -185,6 +196,55 @@ input[type="radio"]:checked + span {
 
 .action-desc + .action-desc {
     margin-top: 0.875rem;
+}
+
+.player-header {
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.player-name {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    flex-basis: 50%;
+}
+
+.player-icon {
+    height: 40px;
+    width: 40px;
+    background-color: black;
+    border-radius: 50%;
+}
+
+.player-icon path {
+    fill-rule: evenodd;
+}
+
+.player-icon-yellow path {
+    fill: #ffff4d;
+    background-color: #ffff4d;
+    color: #47443f;
+}
+
+.player-icon-blue path {
+    fill: #00d0ff;
+    background-color: #00d0ff;
+}
+
+.player-icon-gray path {
+    fill: #9DA4B0;
+    background-color: #9DA4B0;
+    color: #47443f;
+}
+
+.player-icon-red path {
+    fill: #ff8a26;
+    background-color: #ff8a26;
 }
 
 /* --- Cards --- */
