--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -158,6 +158,16 @@ a, a:visited, a:hover {
     font-size: 0.9rem;
 }
 
+.current-round {
+    border-radius: 50%;
+    background-color: black;
+    color: #fff;
+    width: 20px;
+    display: inline-block;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
 .section-title {
     font-size: 1rem;
     flex-shrink: 0;
