--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -349,6 +349,8 @@ input[type="checkbox"]:checked + span {
 
 .boardstate__marketspaces {
     font-weight: bold;
+    padding: 1rem;
+    background-color: #efefef;
 }
 
 .boardstate__locations {
