--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -253,7 +253,8 @@ input[type="checkbox"].checkbox-strike:checked + span {
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
-    flex-basis: 50%;
+    flex-basis: 80%;
+    padding-left: 1rem;
 }
 
 .player-icon {
