--- a/eliza/styles.css
+++ b/eliza/styles.css
@@ -247,6 +247,8 @@ input[type="checkbox"].checkbox-strike:checked + span {
     padding: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
+    background-color: #f7f7f7;
+    border-radius: 10px;
 }
 
 .player-name {
