--- a/mc/styles.css
+++ b/mc/styles.css
@@ -12,6 +12,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     background-color: #000;
+    padding-bottom: 150px;
 }
 
 .total-hit-points {
