--- a/mc/styles.css
+++ b/mc/styles.css
@@ -110,3 +110,12 @@ input {
 .edit-buttons {
     margin-top: 1rem;
 }
+
+.character-edit + .character-edit {
+    margin-top: 1rem;
+}
+
+.character-edit-buttons {
+    font-size: 1.1rem;
+    margin-top: 0.25rem;
+}
