--- a/mc/styles.css
+++ b/mc/styles.css
@@ -49,6 +49,10 @@ body {
     margin-bottom: 0.125rem;
 }
 
+.scheme h2 {
+    color: yellow;
+}
+
 .status-card {
     margin: 0;
     padding: 0.25rem;
@@ -86,13 +90,26 @@ body {
     margin-left: 0.5rem;
 }
 
-.hit-point-buttons a {
+.threat {
+    display: flex;
+    align-items: center;
+    margin-top: 0.5rem;
+}
+
+.hit-point-buttons a, .threat a {
     padding: 0.675rem;
     background-color: darkred;
     text-decoration: none;
     border-radius: 25%;
     display: inline-flex;
     font-weight: bold;
+}
+
+.threat a {
+    flex-shrink: 0;
+    margin: 0 0.25rem;
+    background-color: #CCCC00;
+    color: #000;
 }
 
 a.hit-point-buttons--big {
@@ -130,11 +147,20 @@ a + a {
     border: none;
 }
 
-input[type='text'], input[type='number'] {
+input[type='text'], input[type='number'], select {
     color: #000;
     margin-top: 1rem;
     padding: 0.5rem;
     font-size: 1.1rem;
+}
+
+select {
+    padding: 0.1rem;
+    font-size: 0.9rem;
+}
+
+option {
+    color: #000;
 }
 
 .character-name {
@@ -170,6 +196,7 @@ input[type='text'], input[type='number'] {
 
 .character-edit + .character-edit {
     margin-top: 1rem;
+    border-top: dashed 1px #efefef;
 }
 
 .character-edit-buttons {
@@ -180,4 +207,32 @@ input[type='text'], input[type='number'] {
 .character-edit-buttons label {
     display: inline-flex;
     padding: 0.5rem;
+}
+
+
+.wrapper {
+    width: 100%;
+    text-align: center;
+    display: flex;
+}
+
+.progress-bar {
+    width: 70%;
+    background-color: #000;
+    border: solid 1px #fff;
+    padding: 3px;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
+}
+
+.progress-total {
+    width: 30%;
+}
+
+.progress-bar-fill {
+    display: block;
+    height: 22px;
+    background-color: darkred;
+    border-radius: 3px;
+    transition: width 500ms ease-in-out;
 }
