--- a/mc/styles.css
+++ b/mc/styles.css
@@ -20,6 +20,7 @@ body {
     font-size: 2.5rem;
     border-right: dashed 1px #fff;
     padding-right: 0.5rem;
+    cursor: pointer;
 }
 
 .max-hit-points {
