--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,13 @@ h1 {
     margin: 0;
     height: 50px;
 }
+
+p {
+    margin-bottom: 0.25rem;;
+}
+
+.small {
+    font-size: 0.9rem;
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+}
