Nice Sandra and missing rules

--- a/kanbanev/styles.css
+++ b/kanbanev/styles.css
@@ -437,3 +437,11 @@ a, a:visited, a:hover {
 .usingDEArt .dept-img {
     min-width: 47px;
 }
+
+.niceSandra {
+    margin-bottom: 1rem;
+}
+
+.niceSandra label {
+    cursor: pointer;
+}
