--- a/nemoswarcalc/styles.css
+++ b/nemoswarcalc/styles.css
@@ -32,7 +32,7 @@ body {
 .entries {
     background-color: rgb(21, 39, 63, .9);
     width: 80vw;
-    padding: 1rem;
+    padding: 0 1rem;
     font-size: 1.3rem;
 }
 
@@ -40,18 +40,28 @@ body {
     display: block;
     margin-top: 0.75rem;
     font-size: 1rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    margin-bottom: .125rem;
 }
 
 .entry, .entry-small {
     padding: .5rem;
     color: #000;
     margin-right: 0.5rem;
-    width: 4rem;
+    width: 5rem;
+    border: solid 2px #000;
+    border-radius: 4px;
 }
 
 .entry-small {
-    width: 2.5rem;
+    width: 3rem;
     margin-right: 0.25rem;
+}
+
+.linetotal {
+    font-weight: 900;
+    color: yellow;
 }
 
 .small-label {
@@ -63,6 +73,7 @@ body {
     background-color: #FCF4E7;
     opacity: 0.8;
     padding: 0.5rem 1rem;
+    margin: 0 -1rem;
 }
 
 .instructions ul {
@@ -79,11 +90,12 @@ body {
 }
 
 .motive {
-    background-color: #000;
-    width: 100%;
+    background-color: rgb(21, 39, 63, 1);
     padding: 1rem;
     font-size: 1.1rem;
     display: flex;
+    margin: 0 -1rem;
+    justify-content: center;
 }
 
 select {
@@ -101,14 +113,29 @@ option, optgroup {
     margin-bottom: 3rem;
     font-size: 1.5rem;
     border-top: solid 1px #fff;
+    font-weight: 900;
 }
 
-.totalscore em {
-    font-size: 1.3rem;
+.victorylevel {
+    font-size: 1.5rem;
 }
 
 .otherlinks {
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.otherlinks a {
     display: block;
     font-size: 0.9rem;
-    margin-bottom: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+.reminder {
+    font-size: 0.75rem;
+    font-style: italic;
+    margin-top: 0.125rem;
+    padding: 0;
+    margin-bottom: 0.25rem;
 }
